Insert function added

--- a/dynamic_array.ipynb
+++ b/dynamic_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkfbFyHI/L6fkrvoWn3PQL",
+      "authorship_tag": "ABX9TyPGiKeoah7rrr2wBrUxenZ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "XNtiV-cD9eVA"
       },
@@ -84,6 +84,13 @@
         "        if self.n == self.size:\n",
         "            #resize\n",
         "            self.__resize(self.size*2)\n",
+        "        if pos < 0 or pos > self.n:\n",
+        "          return 'Index error : Index out of range'\n",
+        "\n",
+        "        for i in (self.n , pos , -1):\n",
+        "          self.A[i] = self.A[i-1]\n",
+        "        self.A[pos] = item\n",
+        "        self.n = self.n + 1\n",
         "\n",
         "\n",
         "    def __resize(self, new_capacity):\n",
@@ -111,7 +118,7 @@
       "metadata": {
         "id": "vwJ8mMaL98wE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +129,7 @@
       "metadata": {
         "id": "0bSnWNZ6-DsG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +142,7 @@
       "metadata": {
         "id": "-WlcRFFF-IIU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +157,7 @@
         "id": "b3aSAh5J-PMh",
         "outputId": "0154dfd0-88f4-486b-cefe-93286cc4e490"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +180,7 @@
         "id": "lhrZVazA-SBK",
         "outputId": "af0b0e79-359f-4098-d399-5321587c537d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +215,7 @@
         "id": "uyqgXcH1-fke",
         "outputId": "92eedadf-a9c1-424e-ddca-41b4e660c79b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
