Insert Update working fine

--- a/dynamic_array.ipynb
+++ b/dynamic_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGiKeoah7rrr2wBrUxenZ7",
+      "authorship_tag": "ABX9TyMTq+Bx+BS7g727Fn6yw12B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "XNtiV-cD9eVA"
       },
@@ -87,8 +87,9 @@
         "        if pos < 0 or pos > self.n:\n",
         "          return 'Index error : Index out of range'\n",
         "\n",
-        "        for i in (self.n , pos , -1):\n",
+        "        for i in range(self.n , pos , -1):\n",
         "          self.A[i] = self.A[i-1]\n",
+        "\n",
         "        self.A[pos] = item\n",
         "        self.n = self.n + 1\n",
         "\n",
@@ -118,7 +119,7 @@
       "metadata": {
         "id": "vwJ8mMaL98wE"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -129,7 +130,7 @@
       "metadata": {
         "id": "0bSnWNZ6-DsG"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -142,7 +143,18 @@
       "metadata": {
         "id": "-WlcRFFF-IIU"
       },
-      "execution_count": null,
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l.append(48)"
+      ],
+      "metadata": {
+        "id": "H9_KKyNJ6sqm"
+      },
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -155,15 +167,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b3aSAh5J-PMh",
-        "outputId": "0154dfd0-88f4-486b-cefe-93286cc4e490"
+        "outputId": "34784ea7-f6f9-4dd0-99a1-445a773c2d31"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[hello,3.4,True]\n"
+            "[hello,3.4,True,48]\n"
           ]
         }
       ]
@@ -213,9 +225,9 @@
           "height": 35
         },
         "id": "uyqgXcH1-fke",
-        "outputId": "92eedadf-a9c1-424e-ddca-41b4e660c79b"
+        "outputId": "df475cfd-b169-4dc4-d852-1cf4cbd86e13"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +240,41 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l.insert(2, 'world')"
+      ],
+      "metadata": {
+        "id": "tPLjLb9V560Q"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(l)"
+      ],
+      "metadata": {
+        "id": "p5bvmnzQ6iFt",
+        "outputId": "0f4b9c7f-aafd-435d-a84d-8d47a2e82b0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[hello,3.4,world,True,48]\n"
+          ]
         }
       ]
     }
