--- a/dynamic_array.ipynb
+++ b/dynamic_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTq+Bx+BS7g727Fn6yw12B",
+      "authorship_tag": "ABX9TyPHN3rTiiSmrnrePFQ1SoH8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "id": "XNtiV-cD9eVA"
       },
@@ -93,6 +93,22 @@
         "        self.A[pos] = item\n",
         "        self.n = self.n + 1\n",
         "\n",
+        "    def remove(self, item):\n",
+        "        pos = self.find(item)\n",
+        "        if type(pos) == int:\n",
+        "          self.__delitem__(pos)\n",
+        "        else:\n",
+        "          return pos\n",
+        "\n",
+        "    def __delitem__(self, pos):\n",
+        "        if pos < 0 or pos >= self.n:\n",
+        "          return 'Index error : Index out of range'\n",
+        "        else:\n",
+        "          for i in range(pos, self.n-1):\n",
+        "            self.A[i] = self.A[i+1]\n",
+        "\n",
+        "          self.n = self.n - 1\n",
+        "\n",
         "\n",
         "    def __resize(self, new_capacity):\n",
         "        # Creating new array with size new_capacity\n",
@@ -119,7 +135,7 @@
       "metadata": {
         "id": "vwJ8mMaL98wE"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -130,7 +146,7 @@
       "metadata": {
         "id": "0bSnWNZ6-DsG"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -143,7 +159,7 @@
       "metadata": {
         "id": "-WlcRFFF-IIU"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -154,7 +170,7 @@
       "metadata": {
         "id": "H9_KKyNJ6sqm"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -167,18 +183,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b3aSAh5J-PMh",
-        "outputId": "34784ea7-f6f9-4dd0-99a1-445a773c2d31"
+        "outputId": "f0b5c573-f485-4e11-b1e5-3d3f08b8a0ce"
       },
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[hello,3.4,True,48]\n"
+            "[hello,True,48]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l.remove(3.4)"
+      ],
+      "metadata": {
+        "id": "1vV_LhRv_-0h"
+      },
+      "execution_count": 29,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -261,22 +288,33 @@
         "print(l)"
       ],
       "metadata": {
-        "id": "p5bvmnzQ6iFt",
-        "outputId": "0f4b9c7f-aafd-435d-a84d-8d47a2e82b0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p5bvmnzQ6iFt",
+        "outputId": "a801f3eb-54c9-4b46-cf4a-3a45d215e746"
       },
-      "execution_count": 29,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[hello,3.4,world,True,48]\n"
+            "[hello,3.4,True,48]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "del l[1000]"
+      ],
+      "metadata": {
+        "id": "S0j2vAwC81tx"
+      },
+      "execution_count": 22,
+      "outputs": []
     }
   ]
 }
