--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhvtMaVx1Pmgjl+KdIcVfX",
+      "authorship_tag": "ABX9TyN7KtLEqMZpSNfM8qE2wdg8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {
         "id": "aO8_Dy1fBZ86"
       },
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kMYhS8f1jV9Z",
-        "outputId": "b358fe25-a59c-4948-a060-5219c08088de"
+        "outputId": "00121f15-a3ee-4563-c6c6-b1648bb403da"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,9 +78,78 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "class LinkedList:\n",
+        "  def __init__(self):\n",
+        "    #Create a Empty LL\n",
+        "    self.head = None\n",
+        "    self.n = 0 # n is the number of node\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return self.n\n",
+        "\n",
+        "  def insert_head(self, value):\n",
+        "    #new Node\n",
+        "    new_node = Node(value)\n",
+        "\n",
+        "    #Check for empty list\n",
+        "    if self.n == 0 :\n",
+        "      self.head = new_node\n",
+        "\n",
+        "    #creating connection\n",
+        "    new_node.next = self.head\n",
+        "\n",
+        "    #reassing head\n",
+        "    self.head = new_node\n"
+      ],
+      "metadata": {
+        "id": "dbsOiCSWnGUm"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l = LinkedList()"
+      ],
+      "metadata": {
+        "id": "GMzUDIEenfh6"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(l)"
+      ],
+      "metadata": {
+        "id": "Jayw0SwLnlQm",
+        "outputId": "fbb2a383-3f4b-4a27-a825-797b474f2ed6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "U4ASjp9lmopy"
+        "id": "ebplVvjYqa9N"
       },
       "execution_count": null,
       "outputs": []
