replacing max function added

--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPAPjCHAfsrCMW6+z8aUru1",
+      "authorship_tag": "ABX9TyMkOAuvTydIxrJvjhIHvznR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -185,12 +185,29 @@
         "    cur = self.head\n",
         "    for i in range(pos):\n",
         "      cur = cur.next\n",
-        "    return cur.data"
+        "    return cur.data\n",
+        "\n",
+        "  def replace_max(self, value):\n",
+        "    if self.head == None:\n",
+        "      return 'Empty Linked List'\n",
+        "    cur = temp = self.head\n",
+        "    while cur != None:\n",
+        "      if cur.data >= temp.data:\n",
+        "        temp = cur\n",
+        "      cur = cur.next\n",
+        "    temp.data = value\n",
+        "\n",
+        "  def sum_odd(self):\n",
+        "    cur = self.head\n",
+        "    while cur != None:\n",
+        "      if self.n % 2 != 0:\n",
+        "        print(cur.data)\n",
+        "      cur = cur.next"
       ],
       "metadata": {
         "id": "NrEIWaLNRQ7i"
       },
-      "execution_count": 61,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -201,7 +218,7 @@
       "metadata": {
         "id": "n-mXIfKpS3MX"
       },
-      "execution_count": 62,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -242,7 +259,7 @@
       "metadata": {
         "id": "JC8EIfPBTMhx"
       },
-      "execution_count": 92,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -253,7 +270,18 @@
       "metadata": {
         "id": "mPgcPw5pZu9P"
       },
-      "execution_count": null,
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l.append(100)"
+      ],
+      "metadata": {
+        "id": "Bj1gXgxh3Zd5"
+      },
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -266,15 +294,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t6MVSE3UUKxs",
-        "outputId": "d4ac920b-dd9b-4011-e6ca-793c37394d01"
+        "outputId": "be7e1750-a659-4d31-bc0f-6c5c949977ce"
       },
-      "execution_count": 95,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4->3->1->0\n"
+            "4->3->2->1->0\n"
           ]
         }
       ]
@@ -287,32 +315,35 @@
       "metadata": {
         "id": "AQqK6CD9bbh9"
       },
-      "execution_count": 94,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "l.search(4)"
+        "l.sum_odd()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 263
         },
         "id": "21a0GCs3f8Lk",
-        "outputId": "28783c93-7270-4660-cf3b-43a71b476cf2"
+        "outputId": "8ea75148-aa49-4519-8352-a44539f646cc"
       },
-      "execution_count": 15,
+      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'i' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-52-138ff51a3dc1>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum_odd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-48-89fea5551ee0>\u001b[0m in \u001b[0;36msum_odd\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    156\u001b[0m     \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mcur\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m       \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m       \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
+          ]
         }
       ]
     }
