Sum of odd and Reverse added

--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkOAuvTydIxrJvjhIHvznR",
+      "authorship_tag": "ABX9TyNoKG8QET2nxEfXgpfuf/M7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,15 +199,29 @@
         "\n",
         "  def sum_odd(self):\n",
         "    cur = self.head\n",
+        "    n = 0\n",
+        "    sum = 0\n",
         "    while cur != None:\n",
-        "      if self.n % 2 != 0:\n",
-        "        print(cur.data)\n",
-        "      cur = cur.next"
+        "      if n % 2 != 0:\n",
+        "        sum = sum + cur.data\n",
+        "      n = n + 1\n",
+        "      cur = cur.next\n",
+        "    return sum\n",
+        "\n",
+        "  def reverse(self):\n",
+        "    pv_node = None\n",
+        "    cur = self.head\n",
+        "    while cur != None:\n",
+        "      next = cur.next\n",
+        "      cur.next = pv_node\n",
+        "      pv_node = cur\n",
+        "      cur = next\n",
+        "    self.head = pv_node\n"
       ],
       "metadata": {
         "id": "NrEIWaLNRQ7i"
       },
-      "execution_count": 48,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -218,7 +232,7 @@
       "metadata": {
         "id": "n-mXIfKpS3MX"
       },
-      "execution_count": 49,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -250,6 +264,17 @@
     {
       "cell_type": "code",
       "source": [
+        "l.clear()"
+      ],
+      "metadata": {
+        "id": "B9O-Y-XdxaCT"
+      },
+      "execution_count": 109,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "l.insert_head(1)\n",
         "l.insert_head(2)\n",
         "l.insert_head(3)\n",
@@ -259,7 +284,7 @@
       "metadata": {
         "id": "JC8EIfPBTMhx"
       },
-      "execution_count": 50,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -270,18 +295,18 @@
       "metadata": {
         "id": "mPgcPw5pZu9P"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "l.append(100)"
+        "l.append(5)"
       ],
       "metadata": {
         "id": "Bj1gXgxh3Zd5"
       },
-      "execution_count": 34,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -294,15 +319,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t6MVSE3UUKxs",
-        "outputId": "be7e1750-a659-4d31-bc0f-6c5c949977ce"
+        "outputId": "e6165a2d-ac4c-4a60-b8ec-1191453437b1"
       },
-      "execution_count": 51,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4->3->2->1->0\n"
+            "0->1->2->3->4\n"
           ]
         }
       ]
@@ -310,12 +335,12 @@
     {
       "cell_type": "code",
       "source": [
-        "l.delete_at(2)"
+        "l.reverse()"
       ],
       "metadata": {
         "id": "AQqK6CD9bbh9"
       },
-      "execution_count": 30,
+      "execution_count": 131,
       "outputs": []
     },
     {
@@ -325,24 +350,50 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 263
+          "base_uri": "https://localhost:8080/"
         },
         "id": "21a0GCs3f8Lk",
-        "outputId": "8ea75148-aa49-4519-8352-a44539f646cc"
+        "outputId": "1d0e8264-ba48-46b0-c56d-9329368a5ffc"
       },
-      "execution_count": 52,
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l.reverse()"
+      ],
+      "metadata": {
+        "id": "eoFo5xVRB_kZ",
+        "outputId": "33b34fe5-d7b1-4158-e712-7221e7b34849",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        }
+      },
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'i' is not defined",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: '0->1->2->3->4'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-52-138ff51a3dc1>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum_odd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-48-89fea5551ee0>\u001b[0m in \u001b[0;36msum_odd\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    156\u001b[0m     \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mcur\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m       \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m       \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'i' is not defined"
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-125-074c39a228cb>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-121-46d84152ca5f>\u001b[0m in \u001b[0;36mreverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    173\u001b[0m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'->'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m       \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '0->1->2->3->4'"
           ]
         }
       ]
