String Pattern problem added

--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoKG8QET2nxEfXgpfuf/M7",
+      "authorship_tag": "ABX9TyMY1+EKtpZ78VZHY45O1OiI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "xCQmR5VXQckA"
       },
@@ -221,7 +221,7 @@
       "metadata": {
         "id": "NrEIWaLNRQ7i"
       },
-      "execution_count": 127,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -232,7 +232,7 @@
       "metadata": {
         "id": "n-mXIfKpS3MX"
       },
-      "execution_count": 128,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "B9O-Y-XdxaCT"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,7 +284,7 @@
       "metadata": {
         "id": "JC8EIfPBTMhx"
       },
-      "execution_count": 129,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -306,7 +306,7 @@
       "metadata": {
         "id": "Bj1gXgxh3Zd5"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,9 +319,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t6MVSE3UUKxs",
-        "outputId": "e6165a2d-ac4c-4a60-b8ec-1191453437b1"
+        "outputId": "a9d9528f-1e53-4368-9c26-c329d99ca4bc"
       },
-      "execution_count": 132,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
       "metadata": {
         "id": "AQqK6CD9bbh9"
       },
-      "execution_count": 131,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -355,7 +355,7 @@
         "id": "21a0GCs3f8Lk",
         "outputId": "1d0e8264-ba48-46b0-c56d-9329368a5ffc"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,31 +372,45 @@
     {
       "cell_type": "code",
       "source": [
-        "l.reverse()"
+        "\n",
+        "#4. Given a linked list of characters. Write a python function to return a new\n",
+        "#string that is created by #appending all the characters given in the linked list as per the rules given below.\n",
+        "#Rules ->\n",
+        "#Replace '*' or '/' by a single space\n",
+        "#In case of two consecutive occurrences of ** or /, replace those two\n",
+        "#occurrences by a single space and #convert the next character to upper case\n",
+        "#Assume that ->\n",
+        "#There will not be more than two consecutive occurrences of '*' or '/'\n",
+        "#The linked list will always end with an alphabet\n",
+        "#Sample Input\n",
+        "#A.n.\"./.a,p,p,le,.a./.day,*,*,k,e,e,p.s./.*.a././.do,c,t,o.r.\"Aw,a.y\n",
+        "#Expected Output\n",
+        "#An Apple a day Keeps A Doctor Away"
       ],
       "metadata": {
-        "id": "eoFo5xVRB_kZ",
-        "outputId": "33b34fe5-d7b1-4158-e712-7221e7b34849",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 228
-        }
+        "id": "ZPkyLd7hoHR6"
       },
-      "execution_count": 125,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: '0->1->2->3->4'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-125-074c39a228cb>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-121-46d84152ca5f>\u001b[0m in \u001b[0;36mreverse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    173\u001b[0m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'->'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m       \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '0->1->2->3->4'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def change_sant():\n",
+        "  cur = self.head\n",
+        "  while cur != None:\n",
+        "    if cur.data == '*' or cur.data == '/':\n",
+        "      cur.data = ' '\n",
+        "      if cur.next.data == '*' or cur.next.data == '/':\n",
+        "        cur.next.next.data = cur.next.next.data.upper()\n",
+        "        cur.next = cur.next.next\n",
+        "    cur = cur.next"
+      ],
+      "metadata": {
+        "id": "ggVWZUIHoSW5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
